--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -8,13 +8,15 @@
 
 		    body {
 			  font: 10px sans-serif;
-			  background: rgba(255, 255, 255, 1);
+			  background: rgba(250, 255, 255, 1);
 			  margin: 0px !important;
 			}
 
 		</style>
-			<script type="text/javascript" src="libraries/plotly-1.27.1.min.js"></script>
-			//<script type="text/javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+		<script type="text/javascript" src="libraries/plotly-1.27.1.min.js"></script>
+		<!-- <script type="text/javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+
 		<script>
 			//functions:			
 			//init()					
@@ -54,6 +56,11 @@
 				return parameters;
 			}
 
+			function setParameters(attributes)
+			{
+				
+			}
+
 			var timeData = [];
 			var valueData = [];
 			var plotData = {};
@@ -78,11 +85,19 @@
 			function drawGraph(pvName, pvStatus, pvSeverity)
 			{
 				var plot = document.getElementById("display");
+				var plotColor = "black";
+				if(pvSeverity == "MAJOR" )
+					plotColor = "red";
+				else if(pvSeverity == "MINOR")
+					plotColor = "orange";
+				else
+					plotColor = "green";
+				
 			    Plotly.newPlot("display", [
 			    { y: [],  type: 'scatter', mode: 'lines' }
 			    ], {
 			        title: pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity,
-			        titlefont: { size: 12 },
+			        titlefont: { size: 12, color: plotColor},
 			        xaxis: { title: 'time', 'titlefont': { size: 10 }, showticklabels: true },
 			        yaxis: { title: 'amplitude', titlefont: { size: 10 }, zeroline: true }
 					,margin: { l:45, r: 10, b: 60, t: 20 }
