--- a/WebGUI/html/widgets/simple_bar_chart.html
+++ b/WebGUI/html/widgets/simple_bar_chart.html
@@ -102,6 +102,11 @@
 				return parameters;
 			}
 
+			function setParameters(attributes)
+			{
+				
+			}
+
 			var data =[];
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
