Continuing methodical rework of status app

--- a/WebGUI/html/SystemStatus.html
+++ b/WebGUI/html/SystemStatus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Supervisor</title>
-	<!-- make a css file for SystemStatus.html -->
+	<!-- css style files -->
 	<link rel="stylesheet" type="text/css" href="/WebPath/css/SystemStatus.css">
 
 	<!-- Javascript files -->
@@ -16,14 +16,27 @@
 
 <body onload='SystemStatus:init();'>
 
-	<div id="mainContent">
-		<h1 style="text-align:center">Overall System Status</h1>
 
-		<div id='filterDiv'>
+		<!-- Header ------------------>
+		<div id='headerDiv' style="">
+			<h1 style="text-align:center">Application Status</h1>
+
+			<div id='lastUpdateTimeDiv'></div>
+
+			<div id='toggleFiltersLinkDiv'>
+				<a onclick='toggleFilters();' title='Toggle App Filters Side Pane' id='toggleFiltersLink'>Hide Filters</a>		 
+			</div>
+			
+		</div>
+
+		<div id='clearDiv'></div>
+
+		<!-- Filters ------------------>
+		<div id='filtersDiv'>
 			<h2 style="margin-left:10px">Filters</h2>
 
 			<!-- Context Filter List ------------------>
-			<button class="collapsible">Context
+			<button class="collapsible">Parent Context Name
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList" id="contextFilter">
@@ -32,27 +45,29 @@
 			</div>
 
 			<!-- Class Filter List ------------------>
-			<button class="collapsible" >Class
+			<button class="collapsible" >App Type
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList" id="classFilter">
 				<ul id="classUl">
 				</ul>
 			</div>
-
-			<!-- Hostname Filter List ------------------>
-			<button class="collapsible">Hostname
+		
+			<!-- Hostname Filter List ------------------>		
+			<button class="collapsible">App Hostname
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList"  id="hostnameFilter">
 				<ul id="hostUl">
 				</ul>
 			</div>
+	
 			
 		</div>
-	
-		<div id='statusDiv'></div>
-	</div>
+
+		<!-- App Status ------------------>
+		<div id='appStatusDiv'></div>
+		
 
 </body>
 
