fixing artdaq config GUI menu bug

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -15107,7 +15107,7 @@
 						menuItems,
 						menuItemHandlers,
 						"editTableMenu",					//element ID
-						x, e.pageY - 10, 				//top left position
+						x, event.pageY - 10, 				//top left position
 						_CONTEXT_MENU_PRIMARY_COLOR, 		//primary color
 						_CONTEXT_MENU_SECONDARY_COLOR		//secondary color
 				);
