--- a/WebGUI/html/ConfigurationGUI_artdaq.html
+++ b/WebGUI/html/ConfigurationGUI_artdaq.html
@@ -1089,7 +1089,7 @@
 				if(++j >= 3) j = 0; //wraparound
 			}
 			
-			//do not let the color get to white
+			//do not let the color get too white
 			j=0;
 			for(i=0;i<3;++i)
 				if(rgb[i] > 230) ++j;
